--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url = " https://aminehd.github.io/tech-content-site/"
-title = "not-matthias"
+title = "AMMMIINEH GARTHHHH"
 description = "This is an example description"
 build_search_index = false
 generate_feeds = true
