--- a/theme.toml
+++ b/theme.toml
@@ -12,5 +12,5 @@ demo = "https://not-matthias.github.io/apollo"
 [extra]
 
 [author]
-name = "not-matthias"
+name = "amineh"
 homepage = "https://github.com/not-matthias"
