--- a/config.toml
+++ b/config.toml
@@ -30,8 +30,7 @@ menu = [
 ]
 
 socials = [
-    { name = "twitter", url = "https://twitter.com/not_matthias", icon = "twitter" },
-    { name = "github", url = "https://github.com/not-matthias/", icon = "github" },
+    { name = "github", url = "https://github.com/aminehd/", icon = "github" },
 ]
 
 custom_css = []
