--- a/config.toml
+++ b/config.toml
@@ -27,6 +27,7 @@ menu = [
     { name = "/projects", url = "/projects", weight = 2 },
     { name = "/about", url = "/about", weight = 3 },
     { name = "/tags", url = "/tags", weight = 4 },
+    { name = "/algoVisual", url = "/algoVisual", weight = 5 },
 ]
 
 socials = [
